--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
     <p class="navy"> &nbsp<b>Acknowlegements / Credits</b> <a class="navy"></a></p>
     <p class="navyfont"> &nbspComing soon!</p>
   <div><center class="navyfont"> <b>Website visit count:</b></center></div>
-  <div><center class="navyfont"><a href="https://hits.sh/github.com/aat145914.github.io/dotd/hits?color=blue"><img alt="Hits" src="https://hits.sh/github.com/aat145914.github.io/dotd/hits.svg"/></a></center></div>
+  <div><center class="navyfont"><a href="https://hits.sh/github.com/aat145914.github.io/dotd/hits/"><img alt="Hits" src="https://hits.sh/github.com/aat145914.github.io/dotd/hits.svg?color=007ec6"/></a></center></div>
   </script>
 </html>
